--- a/NetworkingProjectYatzee/pom.xml
+++ b/NetworkingProjectYatzee/pom.xml
@@ -12,6 +12,13 @@
             <version>RELEASE240</version>
         </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
